--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Typescript Class, Method Decorator for Expressjs using ReflectMetadata",
   "main": "./src/index.js",
-  "typings": "./src/index.d.ts",
+  "types": "./src/index.d.ts",
   "directories": {
     "src": "src"
   },
