--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "src": "src"
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
