--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src": "src"
   },
   "scripts": {
-    "build": "tsc",
+    "prepublish": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
