--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,24 +4,15 @@
         "lib": [
             "es2015",
         ],
-        "outDir":"./src",
+        "outDir":"./dist",
         "module": "commonjs",
         "declaration":true,
         "baseUrl": "./",
-        "paths": {
-            "@src/*": [
-                "src/*"
-            ],
-
-        },
         "strictNullChecks": true,
         "moduleResolution": "node",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
     },
-    "include": [
-        "src/**/*.ts",
-    ],
     "exclude": [
         "node_modules"
     ]
