--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.0.3"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
