--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "ts-decorator-express",
   "version": "1.0.3",
   "description": "Typescript Class, Method Decorator for Expressjs using ReflectMetadata",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
-  "directories": {
-    "src": "src"
-  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "prepublish": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
