--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ts-decorator-express",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Typescript Class, Method Decorator for Expressjs using ReflectMetadata",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "`prepublishOnly`": "tsc",
+    "prepublishOnly": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
