--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ts-decorator-express",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Typescript Class, Method Decorator for Expressjs using ReflectMetadata",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "tsc",
+    "postpublish": "rm -rf ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
