--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "tsc",
+    "postpublish": "rm -rf ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
