--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ts-decorator-express",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "Typescript Class, Method Decorator for Expressjs using ReflectMetadata",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "prepublish": "rm -rf ./dist",
     "prepublishOnly": "tsc",
     "postpublish": "rm -rf ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
