--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "ts-decorator-express",
-  "version": "1.0.33",
-  "description": "Typescript Class, Method Decorator for Expressjs using ReflectMetadata",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "prepublish": "rm -rf ./dist",
-    "prepublishOnly": "tsc",
-    "postpublish": "rm -rf ./dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "reflect-metadata": "^0.1.13"
-  },
-  "devDependencies": {
-    "express": "^4.16.4",
-    "@types/express": "^4.16.1",
-    "typescript": "^3.3.4000"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/0261/typadaExpressDecorator.git"
-  },
-  "author": "typada",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/0261/typadaExpressDecorator/issues",
-    "email": "bada0113c@gmail.com"
-  },
-  "keywords": [
-    "Express",
-    "Typescript",
-    "express",
-    "decorator",
-    "decorators",
-    "es6",
-    "typescript",
-    "reflect-metadata"
-  ]
+    "name": "ts-decorator-express",
+    "version": "1.0.34",
+    "description": "Typescript Class, Method Decorator for Expressjs using ReflectMetadata",
+    "main": "./dist/src/index.js",
+    "types": "./dist/src/index.d.ts",
+    "scripts": {
+        "start": "nodemon",
+        "prepublish": "rm -rf ./dist",
+        "prepublishOnly": "tsc",
+        "postpublish": "rm -rf ./dist",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "reflect-metadata": "^0.1.13"
+    },
+    "devDependencies": {
+        "@types/express": "^4.16.1",
+        "express": "^4.16.4",
+        "nodemon": "^1.19.1",
+        "tslint": "^5.19.0",
+        "typada-lint-rules": "^1.0.0",
+        "typescript": "^3.3.4000"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/0261/typadaExpressDecorator.git"
+    },
+    "author": "typada",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/0261/typadaExpressDecorator/issues",
+        "email": "bada0113c@gmail.com"
+    },
+    "keywords": [
+        "Express",
+        "Typescript",
+        "express",
+        "decorator",
+        "decorators",
+        "es6",
+        "typescript",
+        "reflect-metadata"
+    ]
 }
