--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,15 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": [
-            "es2015",
-        ],
-        "outDir":"./dist",
+        "lib": ["es2015"],
+        "outDir": "./dist",
         "module": "commonjs",
-        "declaration":true,
+        "declaration": true,
         "baseUrl": "./",
         "strictNullChecks": true,
         "moduleResolution": "node",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
+        "emitDecoratorMetadata": true
     },
-    "exclude": [
-        "node_modules",
-        "sample"
-    ]
+    "exclude": ["node_modules", "sample"]
 }
